2004-02-28  Atsushi Enomoto <atsushi@ximian.com>

	* RelaxngReader.cs : ReadPattern() should be public.

2004-02-25  Atsushi Enomoto <atsushi@ximian.com>

	* Removed 
	  - RngGrammar.cs
	  - RngNameClass.cs
	  - RngPattern.cs
	  - RngPatternType.cs
	  They are moved to RelaxngXXX.cs and improved

2004-02-25  Atsushi Enomoto <atsushi@ximian.com>

	* Added 
	  - RelaxngDatatype.cs
	  - RelaxngDatatypeProvider.cs
	  - RelaxngDefaultDatatypes.cs
	  - RelaxngException.cs
	  - RelaxngGrammar.cs
	  - RelaxngMergedProvider.cs
	  - RelaxngNameClass.cs
	  - RelaxngPattern.cs
	  - RelaxngPatternType.cs
	  - XsdDatatypeProvider.cs
	* Misc.cs,
	  RelaxngReader.cs,
	  RelaxngValidatingReader.cs : Radical design changes.

	In short:
	  - API redesign (renaming RngXxx to RelaxngXxx)
	  - Strict grammar validation
	  - Datatype support (XML Schema primitive datatypes)
	  - Some derivative bugfixes such as list validation.

2003-05-19  Atsushi Enomoto <ginga@kit.hi-ho.ne.jp>

	* RelaxngReader.cs :
	  + Now skips immaterial content correctly.
	  + Removed MoveToContent().
	  + Trimming attribute values and names.
	  + Fixed ReadNameClassChoice(), ReadNameClassExcept(),
	    ReadPatternExcept (). They require one or more contents.
	  + QName resolver fix.
	  + ReadListPattern() failed to read actual content.
	* RelaxngValidatingReader.cs :
	  + Fixed incorrect error message.
	  + Fixed incorrect attribute namespace handling.
	* RngGrammar.cs : Some simplification stuff fix. 
	  Support for illegal recursion check.
	* RngNameClass.cs : fixed RngNsName ctor() (argument not passed).
	* RngPattern.cs : fixed ParentRef.Compile() (was treated same as Ref).

2003-05-05  Atsushi Enomoto <ginga@kit.hi-ho.ne.jp>

	* RelaxngReader.cs : ReadExternalRef() hadn't resolved base uri.

2003-04-29  Atsushi Enomoto <ginga@kit.hi-ho.ne.jp>

	* Started.
	* added ChangeLog, RelaxngReader.cs, RelaxngValidatingReader.cs,
	  RngGrammar.cs, RngNameClasses.cs, RngPattern.cs, RngPatternType.cs
	  and Misc.cs.
