@@ -48,6 +48,19 @@ namespace Commons.Xml.Relaxng
 		{
 		}
 
+		public RelaxngExceptNameClass Except {
+			get { return except; }
+			set { except = value; }
+		}
+
+		public override void Write (XmlWriter writer)
+		{
+			writer.WriteStartElement ("", "anyName", RelaxngGrammar.NamespaceURI);
+			if (except != null)
+				except.Write (writer);
+			writer.WriteEndElement ();
+		}
+
 		internal override RdpNameClass Compile (RelaxngGrammar g)
 		{
 			if (except != null) {
@@ -57,11 +70,6 @@ namespace Commons.Xml.Relaxng
 				return new RdpAnyNameExcept (exc);
 			} else
 				return RdpAnyName.Instance;
-		}
-
-		public RelaxngExceptNameClass Except {
-			get { return except; }
-			set { except = value; }
 		}
 
 		internal override void CheckConstraints (bool rejectAnyName, bool rejectNsName) 
@@ -91,6 +99,14 @@ namespace Commons.Xml.Relaxng
 		public RelaxngExceptNameClass Except {
 			get { return except; }
 			set { except = value; }
+		}
+
+		public override void Write (XmlWriter writer)
+		{
+			writer.WriteStartElement ("", "nsName", RelaxngGrammar.NamespaceURI);
+			if (except != null)
+				except.Write (writer);
+			writer.WriteEndElement ();
 		}
 
 		internal override RdpNameClass Compile (RelaxngGrammar g)
@@ -145,6 +161,15 @@ namespace Commons.Xml.Relaxng
 			set { ns = value; }
 		}
 
+		public override void Write (XmlWriter writer)
+		{
+			writer.WriteStartElement ("", "name", RelaxngGrammar.NamespaceURI);
+			writer.WriteAttributeString ("ns", ns);
+			// Here we just skip qname
+			writer.WriteString (ncname);
+			writer.WriteEndElement ();
+		}
+
 		internal override RdpNameClass Compile (RelaxngGrammar g)
 		{
 			return new RdpName (ncname, ns);
@@ -164,6 +189,19 @@ namespace Commons.Xml.Relaxng
 		{
 		}
 
+		public ArrayList Children {
+			get { return names; }
+			set { names = value; }
+		}
+
+		public override void Write (XmlWriter writer)
+		{
+			writer.WriteStartElement ("", "choice", RelaxngGrammar.NamespaceURI);
+			foreach (RelaxngNameClass nc in Children)
+				nc.Write (writer);
+			writer.WriteEndElement ();
+		}
+
 		internal override RdpNameClass Compile (RelaxngGrammar g)
 		{
 			// Flatten names into RdpChoice. See 4.12.
@@ -176,11 +214,6 @@ namespace Commons.Xml.Relaxng
 			for (int i=1; i<names.Count; i++)
 				p = new RdpNameClassChoice (p, ((RelaxngNameClass) names [i]).Compile (g));
 			return p;
-		}
-
-		public ArrayList Children {
-			get { return names; }
-			set { names = value; }
 		}
 
 		internal override void CheckConstraints (bool rejectAnyName, bool rejectNsName) 
@@ -198,6 +231,19 @@ namespace Commons.Xml.Relaxng
 		{
 		}
 
+		public ArrayList Names {
+			get { return names; }
+			set { names = value; }
+		}
+
+		public override void Write (XmlWriter writer)
+		{
+			writer.WriteStartElement ("", "except", RelaxngGrammar.NamespaceURI);
+			foreach (RelaxngNameClass nc in Names)
+				nc.Write (writer);
+			writer.WriteEndElement ();
+		}
+
 		internal RdpNameClass Compile (RelaxngGrammar g)
 		{
 			// Flatten names into RdpGroup. See 4.12.
@@ -210,11 +256,6 @@ namespace Commons.Xml.Relaxng
 					p);
 			}
 			return p;
-		}
-
-		public ArrayList Names {
-			get { return names; }
-			set { names = value; }
 		}
 	}
 }
